# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.372 2014/08/21 18:36:43 jer Exp $

*youtube-dl-2014.08.21.3 (21 Aug 2014)

  21 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.10.ebuild,
  -youtube-dl-2014.08.21.2.ebuild, +youtube-dl-2014.08.21.3.ebuild:
  Version bump.

*youtube-dl-2014.08.21.2 (21 Aug 2014)

  21 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.21.1.ebuild,
  +youtube-dl-2014.08.21.2.ebuild:
  Version bump.

*youtube-dl-2014.08.21.1 (21 Aug 2014)

  21 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.05.ebuild,
  +youtube-dl-2014.08.21.1.ebuild:
  Version bump.

*youtube-dl-2014.08.10 (11 Aug 2014)

  11 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.08.02.1.ebuild,
  +youtube-dl-2014.08.10.ebuild:
  Version bump.

*youtube-dl-2014.08.05 (06 Aug 2014)

  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.30.ebuild,
  +youtube-dl-2014.08.05.ebuild:
  Version bump.

*youtube-dl-2014.08.02.1 (04 Aug 2014)

  04 Aug 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.25.1.ebuild,
  +youtube-dl-2014.08.02.1.ebuild:
  Version bump.

*youtube-dl-2014.07.30 (30 Jul 2014)

  30 Jul 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.24.ebuild,
  +youtube-dl-2014.07.30.ebuild:
  Version bump.

*youtube-dl-2014.07.25.1 (29 Jul 2014)

  29 Jul 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.23.2.ebuild,
  +youtube-dl-2014.07.25.1.ebuild:
  Version bump.

*youtube-dl-2014.07.24 (24 Jul 2014)

  24 Jul 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.21.ebuild,
  +youtube-dl-2014.07.24.ebuild:
  Version bump.

*youtube-dl-2014.07.23.2 (23 Jul 2014)

  23 Jul 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.20.2.ebuild,
  +youtube-dl-2014.07.23.2.ebuild:
  Version bump.

*youtube-dl-2014.07.21 (21 Jul 2014)
