@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST youtube-dl-2014.07.15.tar.gz 881673 SHA256 2274535bb4822af0c6a384d352b85d7c724fe9bd371d9bdd428bba4b1493bd02 SHA512 f1ec3b368559ed79c8b03621f6a27344069af9d4bb62023de5a30dfa571f863d0fc50cd874db63d9867e1c1b04a79a7e127cc13081c73705dcdc17b624fd986b WHIRLPOOL e1954e4a3217ad3a248eb7996169fec5e545fa56d60db7359a159df7a2c4da521a2e27f0eedf08ba90db1379f1248cb5be09f4daffaf58fb82ef143980cfaa3e
 DIST youtube-dl-2014.08.21.3.tar.gz 943061 SHA256 6922e0d1f3e0562afe50dd5c980f987aa15b952e4a45a7a58f3e9b3ec8f22085 SHA512 cdd0ab508936c6a36a42e1c65e65ed1a397b7ea28c7c49b97c9d078283d4d9060a7cb47674bc7c3bdc4112d86927d1d690563d9e17502cec80af113811dcd388 WHIRLPOOL 75850e05cf89021bd902de40ceee73733670399e903eefa8ecd460495c2cc2c76a21c9a58adcef6a37d5a732da4d32a33dc5e24c677eaacd1b9bb1c658b6511a
+DIST youtube-dl-2014.08.22.2.tar.gz 948382 SHA256 6739eda66840bb742c1053701db5c9722f93c42b85408804378789f551d26032 SHA512 17c49845c8c1fe87c12be4ffbddb0712e45f0377de983e687b5a15f73ffa23bdb6ef82d6eea6d96c28d732388a155d4f053520fd8b6ca23dc7f1ec925c4af7c8 WHIRLPOOL e2a1a969b01cbc4473df39d6df07c24788840f890366416cfd11562d66a1f7fc6e14e70b555e00cda04a4fb6c30a82dc67c483b17601ee3b1a23dc34fbd298f0
 EBUILD youtube-dl-2014.07.15.ebuild 1585 SHA256 f8afafedd70401a1c04ad6c487c768253160448299a9255d012f7bad8972ebe2 SHA512 e682dca3add25bb49acf1338a13d12bab8b5b76a944f1eb0669e32620742d26c983e9d116be6878aebc0848c7eb06ec9fc1f159f5c28206ab36f713346c734dd WHIRLPOOL ddf8b6015f3215dcd05fa6e1a66cf6a2e12febe5dc8413ec1ea48003d4686e6eb5d4b381c396fb35d669f57ecace6a8116a6d57b2b259b58c44b43b94266ffcd
 EBUILD youtube-dl-2014.08.21.3.ebuild 1588 SHA256 62afd89d7b41f78941b909497c6e1cf844c96091a8df4458449ae4f4c6965226 SHA512 27be97b076e3fced82401533aa38bc7d8214877a9a081f78e4c6dbbc826250bc0ee4f977642986ac24699a832a3d362b2fb854042f137e39cca7f1c164c351be WHIRLPOOL 7dc2b7e5cd488f0613dcab9f615e71732bbee3e0a46e26a0d6a2d18c311d5bfa9550037763e529e515fb783e33da75a5f171ce0a8c535326d705f4406db091f4
-MISC ChangeLog 55653 SHA256 e3cd21e6db52d5972b283b9b7eb0df218db2687f31938a042d33e8f288a68c48 SHA512 97b9e85db6800b7fb833fac0ca2d0709308e57cdb54477c11025ac1148a9ae56ca0298cb2d7897dfe153978241fe3e23d8a4b249779a724c19c0fc0e48d46141 WHIRLPOOL 886da5c9728807ab3d545f45497f201b581fe94c15ff3ff12864b84871180b2866fd09cdb6328083ee23e31b4c90d2d00393287023234369f3129d485d064b4c
+EBUILD youtube-dl-2014.08.22.2.ebuild 1588 SHA256 ede4414be15f12c6fb9c77cf9e1b21c98148f4b599be94cbf58bffc04a121d69 SHA512 0740f5e4e5350ae486b4050f7cfda8f058dc9341dfd1172e00ebb4e1572f998d12ab08be5a9ab3529f755b6eb4a21ff124c8d108aba15122e87d6cf116b21d44 WHIRLPOOL 395a0599eb02a190b42bcf42c5df4112eb1c1282ae83a4305ed1941408ab59545b9e6dafaf1c0627f9e23f662be5a8c8beb878aa39ee91b2f55aea5286093be7
+MISC ChangeLog 55790 SHA256 c9005068a26dfe9fffe3ff48b81b4c2fcb445b2573780ba164ee872ccc8ec029 SHA512 97cb1451a7c7d41150db29fdad5441ec88abb5b58f89b7a043e85aa1f25dd265d104c178781fd4de5f77a30ac72f5ab52ea12cf76da1693f05c45e6b186710df WHIRLPOOL bc0bc88b8cf3a2deac3ef5d07c16eaa7bf2a7d78c863ab51cb2cb199fb34851bcbf2008f4ddda9edbb0aade61aeb8f23f2393e98666dc53267c747e7c4a2073c
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlP2PDwACgkQVWmRsqeSphPWcgCePDGlmpj+nJzaSrDGf+pDmpvf
-xVQAn0ngPXgmAQYbkAJnYY4Wdh3FhLTE
-=J0Vv
+iEYEAREIAAYFAlP2+L4ACgkQVWmRsqeSphMZoACeK2X/1rMc9PLeC6rZhUUYa2BM
+ySEAn2INn4b7HhkYDZP7rsDd/1MH1NNg
+=Vqxm
 -----END PGP SIGNATURE-----
